@@ -1,4 +1,6 @@
 ---
+plugins:
+    - Drake
 global:
     - indir: /home/jillian/projects/perl/BioX-Workflow/example
     - outdir: /home/jillian/projects/perl/BioX-Workflow/example/OUT
